# cs406

Homeworks/hw1/: benchmark.sh  benchmark_delaunay_n21.txt  benchmark_netherlands_osm.txt  benchmark_soc-LiveJournal1.txt  rcm.cpp  rcm.h  spmv.cpp
Homeworks/hw2/: rcm.cpp  spmv_cuda.cu
Homeworks/hw3/: main.cpp
Project/CS406_Project_Group6/contree-final-cpu/: README.md  _accuracy_controller.py  _best_thread_finder.py  openmp_findings.csv
Project/CS406_Project_Group6/contree-final-cpu/.github/workflows/: pypi_release.yml
Project/CS406_Project_Group6/contree-final-cpu/code/: CMakeLists.txt  backup.csv  benchmark.sh  benchmark_openmp2-3.csv  benchmark_openmp3_continue.csv  benchmark_openmp4-5.csv  benchmark_openmp4-5_continue.csv  main.cpp
Project/CS406_Project_Group6/contree-final-cpu/code/DataStructures/src/: dataview.cpp
Project/CS406_Project_Group6/contree-final-cpu/code/Engine/include/: cache.h  general_solver.h  specialized_solver.h
Project/CS406_Project_Group6/contree-final-cpu/code/Engine/src/: cache.cpp  (+2 more)
Project/CS406_Project_Group6/contree-final-gpu/: .gitignore  README.md  cpu_gpu_mixed_typhoon_results.csv  gpu_nebula_capped_result_for_4_datasets.csv  gpu_typhoon_capped_results.csv  gpu_typhoon_uncapped_results.csv  validate_tree.py
Project/CS406_Project_Group6/contree-final-gpu/code/: CMakeLists.txt  main.cpp
Project/CS406_Project_Group6/contree-final-gpu/code/DataStructures/include/: intervals_pruner.h
Project/CS406_Project_Group6/contree-final-gpu/code/DataStructures/src/: intervals_pruner.cpp
Project/CS406_Project_Group6/contree-final-gpu/code/Engine/include/: GPUBruteForceSolver.h  general_solver.h
Project/CS406_Project_Group6/contree-final-gpu/code/Engine/src/: GPUBruteForceSolver.cu  general_solver.cpp  gpu_debug.cpp  parameter_definitions.cpp
Project/CS406_Project_Group6/contree-final-gpu/code/Utilities/include/: configuration.h  statistics.h
Project/CS406_Project_Group6/contree-final-gpu/code/Utilities/src/: statistics.cpp
Project/CS406_Project_Group6/contree-final-gpu/code/benchmarks/: .~lock.benchmark_full.csv#  README.md  analysis.py  benchmark_full.csv  benchmark_main.cpp  check_unique_counts.py  compare_results.py  debuger  run_full_benchmark.sh  run_thread_benchmark.sh  validate_trees.py
Project/CS406_Project_Group6/contree-final-gpu/code/benchmarks/analysis_out/: best_config_per_dataset_depth.csv  speedup_cpu_vs_gpu.csv  summary_by_dataset_depth.csv
Project/CS406_Project_Group6/contree-final-gpu/code/benchmarks/comparisons/: comparison_baseline_vs_feature1.txt  comparison_baseline_vs_feature128.txt  comparison_baseline_vs_feature16.txt  comparison_baseline_vs_feature32.txt  comparison_baseline_vs_feature4.txt  comparison_baseline_vs_feature64.txt  comparison_baseline_vs_feature8.txt  comparison_cpu_vs_gpu.txt  comparison_feature64_vs_interval_64threads.txt  comparison_feature64_vs_task_64threads.txt  comparison_interval_64threads_vs_lockfree_64threads.txt  comparison_lockfree_64threads_vs_cachealigned_threads.txt  comparison_task_64threads_vs_interval_64threads.txt
Project/CS406_Project_Group6/contree-final-gpu/code/benchmarks/results/: baseline.json  cachealigned_threads.json  cpu.json  feature1.json  feature128.json  feature16.json  feature32.json  feature4.json  feature64.json  feature8.json  gpu.json  gpu_run.json  interval_64threads.json  lockfree_64threads.json  parallel_4threads.json  run.json  serial.json  task_64threads.json
Slides/CS406_531_W8-9-10-11/: CS406_531_Week8_2.pptx  CUDA_Occupancy_calculator.xls
Slides/CS406_531_W8-9-10-11/src/0/: constant.cu  hello.cu  info.cu  kernel.cu  test.cu
Slides/CS406_531_W8-9-10-11/src/1/: async.cu  bandwidthtest.cu  shared.cu  stencil.cu  vecadd.cu
Slides/CS406_531_W8-9-10-11/src/2/: adj_diff.cu  bconflict.cu  mat_mult2_first.cu  shared-memory.cu
Slides/CS406_531_W8-9-10-11/src/3/: cpuvsgpu.cu  cublas.cu  dimensions.cu  simpleOccupancy.cu  transpose.cu
Slides/CS406_531_w14/MPICodes/: barrier.c  bcast.c  gather.c  generic.slurm  hello.c  p2p.c  performance.c  reduce.c  request.c
Slides/Week_1-2/codes/: cheatsheet.txt
Slides/Week_1-2/codes/Branches/: Readme  branch_prediction.cpp  branch_prediction_bits.cpp  branch_prediction_sorted.cpp
Slides/Week_1-2/codes/Prefetch/: prefetch.cpp  prefetch_binary.c
Slides/Week_1-2/codes/SIMD/: dot_simd.cpp  dot_simd_f.cpp  mat_mult_avx.cpp  saxpy.cpp  sse_float_mult.cpp
Slides/Week_1-2/codes/VonNeumann/: Readme  arr_sum.cpp  arr_sum_ll.cpp
(+2 files in other folders)
